--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^5.0.0-alpha.7",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
