--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My web app class homework",
   "main": "server.js",
   "scripts": {
+    "start": "nodemon src\\main\\app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
